--- a/index.html
+++ b/index.html
@@ -716,7 +716,6 @@
         document.getElementById('cancel-historial-btn').onclick = () => document.getElementById('historial-modal').style.display = 'none';
 
         // --- EXPORTAR A PDF ---
-        // ========== INICIO DE LA MODIFICACIÓN: PDF de Ingresos ahora es detallado ==========
         const exportToPDF = (type) => {
             const doc = new jsPDF();
             const data = [...allData[type]].sort((a,b) => new Date(b.fecha) - new Date(a.fecha));
@@ -771,11 +770,30 @@
                 doc.text(`Venta Global:`, 14, startY + 21);
                 doc.text(formatCurrency(totalEfectivo + totalTarjeta), 200, startY + 21, { align: 'right' });
 
-
+            // ========== INICIO DE LA MODIFICACIÓN: PDF de Retiros ahora es detallado ==========
             } else if (type === 'retiros') {
-                const head = [['Fecha', 'Retirado de', 'Descripción', 'Monto']];
-                const body = data.map(r => [r.fecha.toLocaleDateString(), r.metodo, r.descripcion, formatCurrency(r.monto)]);
-                doc.autoTable({ head, body, startY: 35 });
+                const head = [['Fecha', 'Hora', 'Retirado de', 'Descripción', 'Monto']];
+                const body = data.map(r => [
+                    r.fecha.toLocaleDateString('es-CO'),
+                    r.fecha.toLocaleTimeString('es-CO', { hour: '2-digit', minute: '2-digit' }),
+                    r.metodo,
+                    r.descripcion,
+                    formatCurrency(r.monto)
+                ]);
+                doc.autoTable({ head: head, body: body, startY: 35 });
+
+                const grandTotal = data.reduce((sum, r) => sum + r.monto, 0);
+                let finalY = doc.autoTable.previous.finalY;
+
+                doc.setLineWidth(0.5);
+                doc.line(14, finalY + 8, 200, finalY + 8);
+                
+                doc.setFontSize(14);
+                doc.setFont(undefined, 'bold');
+                doc.text('Gran Total de Retiros:', 14, finalY + 15);
+                doc.text(formatCurrency(grandTotal), 200, finalY + 15, { align: 'right' });
+            // ========== FIN DE LA MODIFICACIÓN ==========
+
             } else { // Gastos y Compras
                 const groupKey = type === 'gastos' ? 'categoria' : 'proveedor';
                 const groupedData = data.reduce((acc, item) => {
@@ -808,7 +826,6 @@
             }
             doc.save(`Informe_${type}_${formatDateForInput(new Date())}.pdf`);
         };
-        // ========== FIN DE LA MODIFICACIÓN ==========
 
         const exportDeudasPDF = (type) => {
             const doc = new jsPDF();
