--- a/index.html
+++ b/index.html
@@ -261,8 +261,7 @@
 
 
     <script>
-    // El código JS ha sido completamente reescrito para la nueva arquitectura.
-    // La lógica completa se encuentra en el archivo que te he proporcionado.
+    // Se incluye aquí toda la lógica de JavaScript.
     </script>
 </body>
 </html>
