--- a/index.html
+++ b/index.html
@@ -487,6 +487,12 @@ document.addEventListener('DOMContentLoaded', () => {
             } else {
                 filteredData[key] = [];
             }
+            console.log("--- DEBUG PARA EL RESUMEN ---");
+console.log("Periodo seleccionado:", selectedPeriod);
+console.log("Ingresos filtrados para el resumen:", filteredData.ingresos);
+console.log("Compras filtradas para el resumen:", filteredData.compras);
+console.log("Gastos filtrados para el resumen:", filteredData.gastos);
+console.log("-------------------------------");
         });
         updateDashboard(filteredData.ingresos, filteredData.compras, filteredData.gastos, filteredData.retiros, allData.cuentasPorCobrar, allData.cuentasPorPagar);
     };
