--- a/index.html
+++ b/index.html
@@ -864,5 +864,19 @@ document.addEventListener('DOMContentLoaded', () => {
     }
 });
 </script>
+
+<!-- Botón para realizar el corte de mes -->
+<div class="no-print text-center mt-4">
+    <button id="cut-month-btn" class="bg-indigo-600 text-white py-2 px-4 rounded-lg font-semibold hover:bg-indigo-700">
+        Realizar Corte de Mes
+    </button>
+</div>
+
+<!-- Botón para borrar un mes específico -->
+<div class="no-print text-center mt-4">
+    <button id="delete-month-btn" class="bg-red-600 text-white py-2 px-4 rounded-lg font-semibold hover:bg-red-700">
+        Borrar Mes (Ejemplo: Enero 2025)
+    </button>
+</div>
 </body>
 </html>
