--- a/index.html
+++ b/index.html
@@ -878,5 +878,131 @@ document.addEventListener('DOMContentLoaded', () => {
         Borrar Mes (Ejemplo: Enero 2025)
     </button>
 </div>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+    // Definir la variable `allData` para almacenar los datos de ingresos, compras, etc.
+    let allData = {
+        ingresos: [],
+        compras: [],
+        gastos: [],
+        retiros: [],
+        cuentasPorCobrar: [],
+        cuentasPorPagar: [],
+        vales: [],
+    };
+
+    // Asegurarnos de que `database` esté correctamente inicializado con Firebase
+    const firebaseConfig = {
+        apiKey: "AIzaSyCm5BGh7cWX4A5fXx8zCN33ztuLvseRhAU",
+        authDomain: "control-licorera.firebaseapp.com",
+        databaseURL: "https://control-licorera-default-rtdb.firebaseio.com",
+        projectId: "control-licorera",
+        storageBucket: "control-licorera.appspot.com",
+        messagingSenderId: "430925820415",
+        appId: "1:430925820415:web:e1c06bc73b6863a5c3f7ca",
+        measurementId: "G-86ZY48XKV4"
+    };
+
+    // Inicializar Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+
+    // Función para realizar el corte de mes
+    const handleMonthCut = async () => {
+        // Guardar los datos del mes en el histórico
+        const monthData = {
+            ingresos: allData.ingresos,
+            compras: allData.compras,
+            gastos: allData.gastos,
+            retiros: allData.retiros,
+            cuentasPorCobrar: allData.cuentasPorCobrar,
+            cuentasPorPagar: allData.cuentasPorPagar,
+            vales: allData.vales,
+        };
+
+        const periodKey = `${new Date().getFullYear()}-${new Date().getMonth() + 1}`;
+        historicalPeriods[periodKey] = monthData;
+
+        // Guardar en la base de datos (por ejemplo, Firebase)
+        const periodRef = database.ref(`businesses/${selectedBusinessId}/historicalPeriods`);
+        await periodRef.update(historicalPeriods);
+
+        // Reiniciar el mes actual a cero
+        resetMonthData();
+
+        // Mover cuentas pendientes al siguiente mes
+        await transferPendingAccountsToNextMonth();
+
+        // Mostrar notificación de éxito
+        showNotification('Corte de mes', `El corte de mes para el mes ${periodKey} se realizó con éxito.`);
+    };
+
+    // Función para resetear los datos del mes actual
+    const resetMonthData = () => {
+        allData.ingresos = [];
+        allData.compras = [];
+        allData.gastos = [];
+        allData.retiros = [];
+        allData.cuentasPorCobrar = [];
+        allData.cuentasPorPagar = [];
+        allData.vales = [];
+
+        // Reiniciar en la UI
+        refreshUI();
+    };
+
+    // Función para transferir las cuentas pendientes al siguiente mes
+    const transferPendingAccountsToNextMonth = async () => {
+        const nextMonth = new Date();
+        nextMonth.setMonth(nextMonth.getMonth() + 1); // Sumar un mes para el próximo periodo
+
+        const nextMonthKey = `${nextMonth.getFullYear()}-${nextMonth.getMonth() + 1}`;
+
+        const cuentasPorCobrarPendientes = allData.cuentasPorCobrar.filter(cuenta => cuenta.estado !== 'Pagada');
+        const cuentasPorPagarPendientes = allData.cuentasPorPagar.filter(cuenta => cuenta.estado !== 'Pagada');
+
+        // Agregar las cuentas pendientes al siguiente mes
+        const nextMonthRef = database.ref(`businesses/${selectedBusinessId}/historicalPeriods/${nextMonthKey}`);
+        await nextMonthRef.update({
+            cuentasPorCobrar: cuentasPorCobrarPendientes,
+            cuentasPorPagar: cuentasPorPagarPendientes,
+        });
+    };
+
+    // Función para borrar un mes
+    const handleDeleteMonth = async (monthKey) => {
+        const confirmDelete = confirm(`¿Estás seguro de que deseas eliminar el mes ${monthKey}? Esta acción no puede deshacerse.`);
+        if (confirmDelete) {
+            // Eliminar el mes del histórico
+            const periodRef = database.ref(`businesses/${selectedBusinessId}/historicalPeriods/${monthKey}`);
+            await periodRef.remove();
+
+            showNotification('Mes Eliminado', `El mes ${monthKey} fue eliminado exitosamente.`);
+        }
+    };
+
+    // Función para mostrar notificaciones
+    const showNotification = (title, message) => {
+        alert(`${title}: ${message}`);
+    };
+
+    // Verificar si el botón de corte de mes existe antes de agregar el eventListener
+    const cutMonthBtn = document.getElementById('cut-month-btn');
+    if (cutMonthBtn) {
+        cutMonthBtn.addEventListener('click', handleMonthCut);
+    } else {
+        console.warn('El botón de corte de mes no se encontró en el HTML.');
+    }
+
+    // Verificar si el botón para borrar mes existe antes de agregar el eventListener
+    const deleteMonthBtn = document.getElementById('delete-month-btn');
+    if (deleteMonthBtn) {
+        deleteMonthBtn.addEventListener('click', () => handleDeleteMonth('2025-06'));
+    } else {
+        console.warn('El botón de eliminar mes no se encontró en el HTML.');
+    }
+});
+</script>
 </body>
 </html>
